modifying some UI error in the main page

--- a/src/components/Body/Body.module.css
+++ b/src/components/Body/Body.module.css
@@ -7,7 +7,7 @@
   padding-top: 85px;
 }
 
-.movie {
+.character {
   display: flex;
   gap: 10px;
   margin-bottom: 20px;
@@ -16,17 +16,17 @@
   transition-duration: 0.3s;
 }
 
-.movie:hover {
+.character:hover {
   box-shadow: 2px 1px 7px 3px rgba(200, 153, 44, 0.697);
   transform: translateY(-3px);
 }
 
-.movieImage {
+.characterImage {
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
 }
 
-.movieDescription {
+.characterDescription {
   flex-grow: 1;
   padding: 10px;
   display: flex;
@@ -36,12 +36,15 @@
   border-bottom-right-radius: 5px;
 }
 
-.movieTitle {
+.characterDetails {
+  display: flex;
+  margin-bottom: 10px;
+}
+
+.characterTitle {
   font-size: 22px;
   font-weight: 700;
-  margin-bottom: 20px;
   white-space: nowrap;
   text-overflow: ellipsis;
-  overflow: hidden;
   color: #fff;
 }
