--- a/src/components/Body/Body.module.css
+++ b/src/components/Body/Body.module.css
@@ -38,7 +38,13 @@
 
 .characterDetails {
   display: flex;
+  align-items: center;
+  gap: 15px;
   margin-bottom: 10px;
+}
+
+.characterDetails > span {
+  min-width: 120px;
 }
 
 .characterTitle {
